--- a/TestApp/TestApp/Views/MyPage1.xaml
+++ b/TestApp/TestApp/Views/MyPage1.xaml
@@ -2,16 +2,7 @@
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Padding="20"
     x:Class="TestApp.MyPage1">
-    <ContentPage.Padding>
-        <OnPlatform x:TypeArguments="Thickness">
-            <OnPlatform.Platforms>
-                <On Platform="iOS" Value="20, 40, 20, 20" />
-                <On Platform="Android" Value="20, 30, 20, 20" />
-            </OnPlatform.Platforms>
-        </OnPlatform>
-    </ContentPage.Padding>
     <ContentPage.Content>  
         <!--<StackLayout VerticalOptions="Center" HorizontalOptions="Center">
             <Entry TextChanged="Entry_TextChanged" x:Name="text1" Placeholder="Hello"></Entry>
@@ -24,16 +15,9 @@
             <Label Text="{Binding Text}"></Label>
          </StackLayout>-->
 
-        <StackLayout>
-            <Button Text="Next" Clicked="Button_Clicked"></Button>
-            <Label x:Name="label1"></Label>
-            <Slider x:Name="Slider1" ValueChanged="Slider1_ValueChanged" Maximum="50" Minimum="16"></Slider>
-            <Label x:Name="label2"></Label>
-        </StackLayout>
-
-        <!--<StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+        <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
             <Slider x:Name="slider"></Slider>
             <Label Text="{Binding Source={x:Reference slider},Path=Value,StringFormat='{0:F1}'}"></Label>
-         </StackLayout>-->
+         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
