--- a/TestApp/TestApp/Views/ForgotPasswordPage.xaml
+++ b/TestApp/TestApp/Views/ForgotPasswordPage.xaml
@@ -6,7 +6,7 @@
     <ContentPage.Content>
         <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="FillAndExpand" Margin="20,0,20,80">
             <Label Text="Password Reset" FontSize="30" FontAttributes="Bold" HorizontalOptions="Center"></Label>
-            <Label Text="You will receive further instructions to the below mail Id."
+            <Label Text="You will receive further instructions to the below mail."
                    FontSize="15" FontAttributes="Bold" Margin="0,10,0,0"
                    HorizontalTextAlignment="Center"
                    HorizontalOptions="Center"></Label>
