--- a/TestApp/TestApp/Views/MyPage1.xaml
+++ b/TestApp/TestApp/Views/MyPage1.xaml
@@ -2,7 +2,11 @@
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:TestApp"
     x:Class="TestApp.MyPage1">
+    <ContentPage.BindingContext>
+        <local:MyPage1ViewModel></local:MyPage1ViewModel>
+    </ContentPage.BindingContext>
     <ContentPage.Content>  
         <!--<StackLayout VerticalOptions="Center" HorizontalOptions="Center">
             <Entry TextChanged="Entry_TextChanged" x:Name="text1" Placeholder="Hello"></Entry>
@@ -14,10 +18,77 @@
             <Entry Text="Hello" x:Name="text1"></Entry>
             <Label Text="{Binding Text}"></Label>
          </StackLayout>-->
+        
+        <!--<StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+            <Stepper x:Name="stepper" Increment="1"></Stepper>
+            <Label Text="{Binding Source={x:Reference stepper},Path=Value}"></Label>
+         </StackLayout>-->
 
-        <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
-            <Slider x:Name="slider"></Slider>
-            <Label Text="{Binding Source={x:Reference slider},Path=Value,StringFormat='{0:F1}'}"></Label>
-         </StackLayout>
+        <!--<StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+            <Button Text="Click Me!" Clicked="Button_Clicked"></Button>
+            <Label Text="Result" x:Name="l1"></Label>
+        </StackLayout>-->
+
+        <!--<StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+            <Switch IsToggled="True" Toggled="Switch_Toggled"></Switch>
+            <Label Text="Result" x:Name="label1"></Label>
+        </StackLayout>-->
+
+        <!--<StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+            <Slider x:Name="silder1" Minimum="0" Maximum="255"></Slider>
+            <Label Text="{Binding Source={x:Reference silder1},Path=Value, StringFormat='{0:N0}'}"></Label>
+        </StackLayout>-->
+
+      <!--<StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+          <TableView Intent="Form">
+              <TableRoot>
+                  <TableSection>
+                      <TextCell Text="Name" Detail="Rana"></TextCell>
+                      <EntryCell Label="Title" Placeholder="Online Shoping.."></EntryCell>
+                      <SwitchCell Text="Notification" On="true"></SwitchCell>
+                      <ViewCell>
+                          <StackLayout Orientation="Horizontal" >
+                              <Label Text="Starts" VerticalOptions="Center"></Label>
+                              <DatePicker Format="d MM yyyy" HorizontalOptions="EndAndExpand"></DatePicker>
+                          </StackLayout>
+                      </ViewCell>
+                  </TableSection>
+              </TableRoot>
+          </TableView>
+      </StackLayout>-->
+
+        <!--<Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <Image Source="" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" BackgroundColor="PowderBlue"></Image>
+            <Editor x:Name="text" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Placeholder="Enter your Comments!" Text="{Binding Comments}"></Editor>
+            <Button Grid.Row="2" Grid.Column="0" Text="Post" Command="{Binding PostCommand}"></Button>
+            <Button Grid.Row="2" Grid.Column="1" Text="Clear" Command="{Binding ClearCommand}"></Button>
+            <Label Text="{Binding Result}" x:Name="result" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" FontSize="Large"></Label>
+        </Grid>-->
+
+        <TableView Intent="Form">
+            <TableRoot>
+                <TableSection>
+                    <EntryCell x:Name="title" Placeholder="Shoping..." Label="Title" Completed="OnChange"></EntryCell>
+                    <SwitchCell Text="Notification" On="False" x:Name="notificationEnabled" OnChanged="OnChange"></SwitchCell>
+                </TableSection>
+            </TableRoot>
+        </TableView>
+
+        <!--<StackLayout VerticalOptions="Center" HorizontalOptions="Center" >
+            <Label Text="Welcome Page or Home Page"/>
+            <Entry x:Name="t1"></Entry>
+            <Button Text="Go to Next Page" Clicked="Button_Clicked"></Button>
+        </StackLayout>-->
     </ContentPage.Content>
 </ContentPage>
