--- a/TestApp/TestApp/Views/SearchInListView.xaml
+++ b/TestApp/TestApp/Views/SearchInListView.xaml
@@ -4,12 +4,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="TestApp.SearchInListView">
     <ContentPage.Content>
-        <StackLayout VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand" Margin="10,50,10,0">
+        <StackLayout VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand" Margin="10,50,0,0">
             <SearchBar Placeholder="Search..." TextChanged="SearchBar_TextChanged"></SearchBar>
-            <ListView x:Name="lstView">
+            <Label Text="Recent Searches" FontAttributes="Bold" Margin="20,0,0,0"></Label>
+            <ListView x:Name="lstView" ItemTapped="OnItemTapped">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <TextCell Text="{Binding Name}" Detail="{Binding Email}"></TextCell>
+                        <TextCell Text="{Binding location}" Detail="{Binding checkInAndOut}"></TextCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
