--- a/TestApp/TestApp/Views/SearchInListPage.xaml
+++ b/TestApp/TestApp/Views/SearchInListPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="TestApp.SearchInListView">
+    x:Class="TestApp.SearchInListPage">
     <ContentPage.Content>
         <StackLayout VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand" Margin="10,50,0,0">
             <SearchBar Placeholder="Search..." TextChanged="SearchBar_TextChanged"></SearchBar>
